kubernetes/apps/cal/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: cal
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
